[package]
name = "diagonal-ssm"
version = "0.1.0"
edition = "2021"
description = "Diagonal State Space Models (S4D) for trading signal generation and backtesting"

[dependencies]
reqwest = { version = "0.11", features = ["json", "rustls-tls"] }
tokio = { version = "1.35", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
ndarray = { version = "0.15", features = ["serde"] }
ndarray-rand = "0.14"
rand = "0.8"
rand_distr = "0.4"
nalgebra = "0.32"
statrs = "0.16"
chrono = { version = "0.4", features = ["serde"] }
thiserror = "1.0"
anyhow = "1.0"
log = "0.4"
env_logger = "0.11"
num-complex = "0.4"
csv = "1.3"
indicatif = "0.17"

[dev-dependencies]
approx = "0.5"

[[example]]
name = "fetch_data"
path = "examples/fetch_data.rs"

[[example]]
name = "train"
path = "examples/train.rs"

[[example]]
name = "predict"
path = "examples/predict.rs"

[[example]]
name = "backtest"
path = "examples/backtest.rs"
